Crash @ bmalloc::Environment::computeIsBmallocEnabled https://bugs.webkit.org/show_bug.cgi?id=148183

Reviewed by NOBODY Michael Saboff.

CrashTracer says we have some crashes beneath computeIsBmallocEnabled
dereferencing null in strstr. We null check getenv but not
_dyld_get_image_name, so deduction indicates that _dyld_get_image_name
must be returning null. _dyld_get_image_name isn't really documented,
so let's assume it can return null.

* bmalloc/Environment.cpp:
(bmalloc::isASanEnabled): Check _dyld_get_image_name's return value for
null because we can't prove it won't be null.


Canonical link: https://commits.webkit.org/166309@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188651 268f45cc-cd09-0410-ab3c-d52691b4dbfc